--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -21,14 +21,57 @@
 </nav>
 <center>
   <div class='photos'>
+  <%= image_tag('shwetank') %>
+  </div>
+  <div class='text'>
+      <br/>
+
+  <h2>Shwetank Chauhan Photography</h2>
+      <br/>
+
+  <div>
+    I am a delhI based photogrepher. Basically I am shooting fashion, high-fashion, portfolios, products, events and weddings.
+      </div>
+      <br/>
+      <br/>
+      <h3>EXPERINCE</h3>
+
+/I have done a shoot for la fiesta magzine.
+Have done portfolios.
+<br/>
+Have done products like steel and jewelries, food.
+<br/>
+Have coverd celebrity concerts have many freelance experinces.
+    <br/>
+    <br/>
+
+
+I love to provide a better qulity services to my clients.
+
+<h3> Contact me</h3>
+<br/>
+
+<strong>Email</strong> : shwetank.passion9555@gmail.com
+<br/>
+<strong>Mobile</strong> : 9555448117, 9716186547(Whatsapp)
+<br/>
+<strong>Reach me</strong> : <a href='https://www.facebook.com/SChauhan-Photography-993703270793442/?fref=ts'>Facebook</a> , <a href='http://shwetankpassion955.wix.com/artdirection'>Art Direction</a>
 
   </div>
 
 </center>
 
 <style type="text/css">
+  .text {
+    color: white;
+    padding-top: 100px;
+    margin: 30px;
+    font-size: 14px;
+    font-style: oblique;
+  }
   .photos {
     margin-top: 50px;
+    float: left;
   }
   body {
 
@@ -45,5 +88,6 @@
     color: #fff;
     background-color: #3CB371;
 }
+
 </style>
 
